Added CI/CD , HOME PAGE , FETCH LINK , AI TOOL FOR COMPARATION , MATCH, AND MORE

--- a/src/Pages/search.css
+++ b/src/Pages/search.css
@@ -121,7 +121,26 @@
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
-
+.match-dog-img{
+    width: 100px;
+   
+    border-radius: 30px;
+}
+.spinner {
+    margin: 20px auto;
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
 /* Pagination Buttons */
 .pagination {
     display: flex;
